--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "file-loader": "^0.9.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "moment-timezone": "^0.5.13",
+    "moment-timezone": "^0.5.23",
+    "prop-types": "^15.6.2",
     "rc-select": "^6.8.6",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -39,24 +40,30 @@
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.8.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
+    "escope": "^3.6.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.16.1",
     "json-loader": "^0.5.4",
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
+    "prettier-eslint": "^8.8.2",
     "react-addons-test-utils": "^15.0.2",
-    "redux-devtools": "^3.2.0",
+    "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
-    "rimraf": "^2.5.2",
+    "rimraf": "^2.6.3",
     "sass-loader": "^3.2.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
